# TFIDF-vs-Transformers

./: IMDB.ipynb  README.MD  pyproject.toml  requirements.txt
